syntax = "proto3";

service File {
	rpc Open(OpenRequest) returns(OpenResponse) {};
	rpc Stat(StatRequest) returns(StatResponse) {};
	rpc Read(ReadRequest) returns(ReadResponse) {};
	rpc Close(CloseRequest) returns(CloseResponse) {};

	rpc Create(CreateRequest) returns(CreateResponse) {};
	rpc Write(WriteRequest) returns(WriteResponse) {};
}

message OpenRequest {
	string filename = 1;
}

message OpenResponse {
	int64 id = 1;
	bool result = 2;
}

message CloseRequest {
	int64 id = 1;
}

message CloseResponse {
}

message StatRequest {
	string filename = 1;
}

message StatResponse {
	string type = 1;
	int64 size = 2;
	int64 last_modified = 3;
}

message ReadRequest {
	int64 id = 1;
	int64 offset = 2;
	int64 size = 3;
}

message CreateRequest {
	string filename = 1;
}

message CreateResponse {
	int64 id = 1;
	bool result = 2;
}

message WriteRequest {
	int64 id = 1;
	int64 offset = 2;
	bytes data = 4;
}

message WriteResponse {
	int64 size = 1;
}

message ReadResponse {
	int64 size = 1;
	bytes data = 2;
	bool eof = 3;
}

message GetRequest {
	int64 id = 1;
	int64 block_id = 2;
}

message GetResponse {
	int64 block_id = 1;
	int64 size = 2;
	bytes data = 3;
}


